--- a/p8105_hw5_mk4995.md
+++ b/p8105_hw5_mk4995.md
@@ -51,3 +51,110 @@ it is almost certain that there will be at least one pair of people that
 share a birthday.
 
 ## Problem 2
+
+**Conduct a simulation to explore power in a one-sample t-test.**
+
+Set initial variables.
+
+``` r
+n = 30
+sigma = 5
+mu = 0
+reps = 5000
+alpha = 0.05
+```
+
+Generate 5000 datasets from the normal model.
+
+``` r
+sim_data <- tibble(
+  id = integer(reps),
+  sample = vector("list", reps)
+)
+
+for (i in 1:reps) {
+  sim_data$id[i] = i
+  sim_data$sample[[i]] = rnorm(n, mean = mu, sd = sigma)
+}
+```
+
+Save mu-hat and the p-value evaluated from a t-test with a null
+hypothesis where `mu` = 0 using `alpha` = 0.05.
+
+``` r
+results_df = 
+  sim_data |> 
+  mutate(
+    mu_hats = map_dbl(sample, mean),
+    t_test = map(sample, \(x) broom::tidy(t.test(x, mu = 0, conf.level = 0.95))),
+    p_values = map_dbl(t_test, \(x) x$p.value)
+  ) |> 
+  select(id, mu_hats, p_values)
+```
+
+**Repeat the above for mu = {1,2,3,4,5,6}.**
+
+Step 1: Create a function that evaluates for each value of mu.
+
+``` r
+get_data = function(true_mean, n = 30, sigma = 5, reps = 5000) {
+  # Create dataset of samples for each mu.
+  sim_data <- tibble(
+    id = integer(reps),
+    sample = vector("list", reps)
+  )
+  
+  for (i in 1:reps) {
+    sim_data$id[i] = i
+    sim_data$sample[[i]] = rnorm(n, mean = true_mean, sd = sigma)
+  }
+  
+  # Calculate mu-hats and p-values per sample.
+  results_df = 
+  sim_data |> 
+  mutate(
+    mu_hats = map_dbl(sample, mean),
+    t_test = map(sample, \(x) broom::tidy(t.test(x, mu = true_mean, conf.level = 0.95))),
+    p_values = map_dbl(t_test, \(x) x$p.value)
+  ) |> 
+  select(id, mu_hats, p_values)
+  
+  return(results_df)
+}
+```
+
+Step 2: Create a table for each value of mu.
+
+``` r
+true_means = c(0, 1, 2, 3, 4, 5, 6)
+
+final_df = 
+  tibble(
+    mu = true_means,
+    results = map(true_means, \(x) get_data(true_mean = x))
+  ) |> 
+  unnest(results) |> 
+  select(-id)
+```
+
+**Make a plot showing the proportion of times the null was rejected (the
+power of the test) on the y axis and the true value of mu on the x
+axis.**
+
+``` r
+final_df |> 
+  group_by(mu) |> 
+  summarize(
+    prop_rejected = mean(p_values < alpha)
+  ) |> 
+  ggplot(aes(x = mu, y = prop_rejected)) +
+  geom_point() +
+  geom_line() + 
+  labs(
+    title = "True Mean vs. Power", 
+    x = "True mean",
+    y = "Power"
+  )
+```
+
+![](p8105_hw5_mk4995_files/figure-gfm/unnamed-chunk-8-1.png)<!-- -->
