--- a/p8105_hw5_mk4995.md
+++ b/p8105_hw5_mk4995.md
@@ -114,7 +114,7 @@ get_data = function(true_mean, n = 30, sigma = 5, reps = 5000) {
   sim_data |> 
   mutate(
     mu_hats = map_dbl(sample, mean),
-    t_test = map(sample, \(x) broom::tidy(t.test(x, mu = true_mean, conf.level = 0.95))),
+    t_test = map(sample, \(x) broom::tidy(t.test(x, conf.level = 0.95))),
     p_values = map_dbl(t_test, \(x) x$p.value)
   ) |> 
   select(id, mu_hats, p_values)
@@ -143,10 +143,10 @@ axis.**
 
 ``` r
 final_df |> 
-  group_by(mu) |> 
+  group_by(mu) |>
   summarize(
     prop_rejected = mean(p_values < alpha)
-  ) |> 
+  ) |>
   ggplot(aes(x = mu, y = prop_rejected)) +
   geom_point() +
   geom_line() + 
@@ -158,3 +158,44 @@ final_df |>
 ```
 
 ![](p8105_hw5_mk4995_files/figure-gfm/unnamed-chunk-8-1.png)<!-- -->
+
+As the size of the mean increases, the power of the test increases. This
+implies that as the effect size increases, so does the probability of
+correctly rejecting the null hypothesis (mu = 0).
+
+**Make a plot showing the average estimate of mu-hats for all tests, as
+well as for only rejected tests, on the y axis and the true value of mu
+on the x axis.**
+
+``` r
+final_df |> 
+  group_by(mu) |> 
+  summarize(
+    avg_estimate = mean(mu_hats),
+    avg_rejected_estimate = mean(mu_hats[p_values < alpha])
+  ) |> 
+  ggplot(aes(x = mu)) +
+  geom_line(aes(y = avg_estimate, color = "All Samples")) +
+  geom_point(aes(y = avg_estimate, color = "All Samples")) +
+  geom_line(aes(y = avg_rejected_estimate, color = "Null Rejected")) +
+  geom_point(aes(y = avg_rejected_estimate, color = "Null Rejected")) +
+  labs(
+    title = "Average Estimate of Mu-hat vs. True Mu",
+    x = "True mean",
+    y = "Average mean estimate",
+    color = "Sample Group"
+  ) +
+  scale_color_manual(
+    values = c("All Samples" = "blue", "Null Rejected" = "purple")
+  )
+```
+
+![](p8105_hw5_mk4995_files/figure-gfm/unnamed-chunk-9-1.png)<!-- -->
+
+Across all samples, the average estimate is approximately equal to the
+true mean. The estimate for the sample population where the null was
+rejected is less likely to be equal to the true mean, which makes sense,
+because it represents the population where the mean estimate was
+significantly different from the true mean. Overall, though, as the
+effect size increases, the average estimate across both sample groups
+become approximately equal.
