--- a/p8105_hw5_mk4995.Rmd
+++ b/p8105_hw5_mk4995.Rmd
@@ -183,3 +183,87 @@ final_df |>
 
 Across all samples, the average estimate is approximately equal to the true mean. The estimate for the sample population where the null was rejected is less likely to be equal to the true mean, which makes sense, because it represents the population where the mean estimate was significantly different from the true mean. Overall, though, as the effect size increases, the average estimate across both sample groups become approximately equal. 
 
+## Problem 3
+
+```{r}
+library(readr)
+
+url = "https://raw.githubusercontent.com/washingtonpost/data-homicides/master/homicide-data.csv"
+homicide_data = read_csv(url)
+
+rows = nrow(homicide_data)
+cols = ncol(homicide_data)
+```
+
+**Describe the data.**
+
+The raw data describes the criminal homicides over a decade in 50 of the largest American cities. The dataset contains `r rows` rows and `r cols` columns. The variables include:
+1. `uid`: unique identifier
+2. `reported_date`: date
+3. `victim_last`, `victim_first`: victim name
+4. `victim_race`, `victim_age`, `victim_sex`: victim demographics
+5. `city`, `state`, `lat`, `lon`: location of homicide
+6. `disposition`: case status
+
+**Create a city-state variable and an unsolved homicides variable.**
+
+```{r}
+homicide_data = 
+  homicide_data |> 
+  mutate(
+    city_state = str_c(city, state, sep = ", "),
+    unsolved = ifelse(
+      disposition %in% c("Closed without arrest", "Open/No arrest"), 1, 0
+    )
+  ) |> 
+  filter(city_state != "Tulsa, AL") # Tulsa is not a city in AL - maybe authors intended Tuscaloosa? Only one case, so removed from dataset
+```
+
+**Summarize within cities to obtain the total number of homicides and the number of unsolved homicides (those for which the disposition is “Closed without arrest” or “Open/No arrest”).**
+
+```{r}
+homicide_data_summarized = 
+  homicide_data |> 
+  group_by(city_state) |> 
+  summarize(
+    total_homicides = n(),
+    total_unsolved_homicides = sum(unsolved)
+  )
+
+homicide_data_summarized
+```
+
+**For the city of Baltimore, MD, use the `prop.test` function to estimate the proportion of homicides that are unsolved.**
+
+```{r}
+homicide_data_baltimore = 
+  homicide_data |> 
+  filter(city_state == "Baltimore, MD") 
+
+total_baltimore = nrow(homicide_data_baltimore)
+total_unsolved_baltimore = sum(homicide_data_baltimore$unsolved)
+
+prop_test_baltimore = prop.test(total_unsolved_baltimore, total_baltimore)
+
+prop_test_baltimore |> 
+  broom::tidy() |> 
+  select(estimate, conf.low, conf.high) |> 
+  knitr::kable()
+```
+
+**Now run prop.test for each of the cities in your dataset.**
+
+```{r}
+homicide_data_summarized |> 
+  nest(data = c(total_homicides, total_unsolved_homicides)) |> 
+  mutate(
+    prop_test = map(data, ~ prop.test(.x$total_unsolved_homicides, .x$total_homicides)),
+    # use map2 instead
+    results = map(prop_test, broom::tidy)
+  ) |> 
+  unnest(results) |> 
+  select(city_state, estimate, conf.low, conf.high) |> 
+  knitr::kable()
+```
+
+
